--- a/app/src/main/res/layout/sports_main.xml
+++ b/app/src/main/res/layout/sports_main.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ptr_layout"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <ListView
@@ -10,4 +12,4 @@
         android:divider="@null"
         android:background="#f3f3f3" />
 
-</RelativeLayout>
+</uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout>
