--- a/app/src/main/res/layout/events_row.xml
+++ b/app/src/main/res/layout/events_row.xml
@@ -11,20 +11,20 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
-        android:layout_marginRight="90dp"
         android:layout_marginBottom="0dp"
         android:maxLines="1"
         android:textSize="14sp"
         android:text="Ayudantía"
         android:textColor="@android:color/holo_blue_dark"
-        android:ellipsize="end"/>
+        android:ellipsize="end"
+        android:layout_alignRight="@+id/nameTextView"
+        android:layout_alignEnd="@+id/nameTextView" />
 
     <TextView
         android:id="@+id/nameTextView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/typeTextView"
-        android:layout_marginRight="90dp"
         android:layout_marginLeft="15dp"
         android:layout_marginBottom="3dp"
         android:maxLines="3"
@@ -32,21 +32,24 @@
         android:textStyle="bold"
         android:text="Algebra I"
         android:textColor="@android:color/black"
-        android:ellipsize="end"/>
+        android:ellipsize="end"
+        android:layout_toLeftOf="@+id/dateTextView"
+        android:layout_toStartOf="@+id/dateTextView" />
 
     <TextView
         android:id="@+id/extrasTextView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/nameTextView"
-        android:layout_marginRight="90dp"
         android:layout_marginLeft="15dp"
         android:layout_marginBottom="6dp"
         android:maxLines="3"
         android:textSize="14sp"
         android:text="Sec. 3 - Tomás Wiedman"
         android:textColor="@android:color/secondary_text_light"
-        android:ellipsize="end"/>
+        android:ellipsize="end"
+        android:layout_alignRight="@+id/nameTextView"
+        android:layout_alignEnd="@+id/nameTextView" />
 
     <TextView
         android:id="@+id/dateTextView"
