--- a/app/src/main/res/layout/home_page_slide.xml
+++ b/app/src/main/res/layout/home_page_slide.xml
@@ -4,7 +4,8 @@
     android:id="@+id/content"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#f3f3f3">
 
     <ImageView
         android:id="@+id/slideImageView"
