--- a/app/src/main/res/layout/sports_row.xml
+++ b/app/src/main/res/layout/sports_row.xml
@@ -43,6 +43,40 @@
         android:textColor="#666666"
         android:ellipsize="end"/>
 
+    <TextView
+        android:id="@+id/dateTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@id/nameTextView"
+        android:layout_marginBottom="5dp"
+        android:layout_toLeftOf="@id/navigationNextItemImageView"
+        android:layout_marginTop="2dp"
+        android:layout_marginRight="5dp"
+        android:textSize="13sp"
+        android:gravity="right"
+        android:text="10:10"
+        android:textColor="#666666"
+        android:ellipsize="end"/>
+
+    <TextView
+        android:id="@+id/reservedTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/dateTextView"
+        android:layout_alignRight="@id/dateTextView"
+        android:layout_marginTop="1dp"
+        android:layout_marginBottom="5dp"
+        android:textSize="11sp"
+        android:gravity="right"
+        android:text="RESERVADO"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:background="@drawable/sport_reserved_text"
+        android:textColor="@android:color/white"
+        android:textStyle="bold"/>
+
     <View
         android:id="@+id/bottomSeparatorLine"
         android:layout_width="fill_parent"
