--- a/app/src/main/res/layout/messages_row.xml
+++ b/app/src/main/res/layout/messages_row.xml
@@ -5,13 +5,23 @@
     android:layout_height="wrap_content"
     android:background="#fcfcfc">
 
+    <ImageView
+        android:id="@+id/navigationNextItemImageView"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginRight="5dp"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:src="@drawable/ic_navigation_next_item"/>
+
     <TextView
         android:id="@+id/fromTextView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
+        android:layout_toLeftOf="@id/navigationNextItemImageView"
         android:layout_marginLeft="32dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginRight="35dp"
         android:layout_marginBottom="3dp"
         android:maxLines="1"
         android:textSize="18sp"
@@ -33,13 +43,14 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/fromTextView"
         android:layout_marginLeft="32dp"
-        android:layout_marginRight="15dp"
         android:layout_marginBottom="5dp"
         android:maxLines="3"
         android:textSize="15sp"
         android:text="Se anuncia a los alumnos que se encuentran habilitados los nuevos lockers con el nuevo sistema de lector biometrico de retina."
         android:textColor="@android:color/black"
-        android:ellipsize="end"/>
+        android:ellipsize="end"
+        android:layout_toLeftOf="@+id/navigationNextItemImageView"
+        android:layout_toStartOf="@+id/navigationNextItemImageView" />
 
 
 
@@ -61,7 +72,6 @@
         android:id="@+id/bottomSeparatorLine"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
-        android:layout_below="@id/dateTextView"
-        android:layout_marginTop="5dp"
+        android:layout_alignParentBottom="true"
         android:background="#d5d5d5"/>
 </RelativeLayout>
