--- a/app/src/main/res/layout/courses_row.xml
+++ b/app/src/main/res/layout/courses_row.xml
@@ -15,7 +15,7 @@
         android:src="@drawable/ic_navigation_next_item"/>
 
     <TextView
-        android:id="@+id/titleTextView"
+        android:id="@+id/nameTextView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
@@ -24,16 +24,26 @@
         android:maxLines="1"
         android:textSize="18sp"
         android:text="Algebra Lineal"
+        android:textStyle="bold"
         android:textColor="@android:color/black"
         android:ellipsize="end"
         android:layout_toLeftOf="@+id/navigationNextItemImageView"
         android:layout_toStartOf="@+id/navigationNextItemImageView" />
 
-
-    <View
-        android:id="@+id/bottomSeparatorLine"
+    <TextView
+        android:id="@+id/sectionTextView"
         android:layout_width="fill_parent"
-        android:layout_height="1dp"
-        android:layout_alignParentBottom="true"
-        android:background="#d5d5d5"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="-10dp"
+        android:layout_marginBottom="15dp"
+        android:layout_below="@id/nameTextView"
+        android:layout_marginLeft="10dp"
+        android:maxLines="1"
+        android:textSize="16sp"
+        android:text="Sección 3"
+        android:textColor="#666666"
+        android:ellipsize="end"
+        android:layout_toLeftOf="@+id/navigationNextItemImageView"
+        android:layout_toStartOf="@+id/navigationNextItemImageView" />
+
 </RelativeLayout>
