--- a/app/src/main/res/layout/messages_main.xml
+++ b/app/src/main/res/layout/messages_main.xml
@@ -9,7 +9,7 @@
         android:id="@+id/itemsListView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:divider="@null"
+        android:divider="@drawable/abs__list_divider_holo_light"
         android:background="#f3f3f3" />
 
 </uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout>
