--- a/app/src/main/res/layout/sports_detail.xml
+++ b/app/src/main/res/layout/sports_detail.xml
@@ -2,15 +2,14 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content" android:layout_height="wrap_content">
+    android:padding="15dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/nameTextView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
         android:textSize="22sp"
         android:textStyle="bold"
         android:textColor="@android:color/primary_text_light"
@@ -35,7 +34,6 @@
         android:layout_below="@id/teacherTextView"
         android:layout_alignLeft="@id/nameTextView"
         android:layout_marginTop="3dp"
-        android:layout_marginRight="15dp"
         android:layout_marginBottom="5dp"
         android:textColor="#666666"
         android:textSize="14sp"
@@ -64,7 +62,6 @@
         android:layout_alignRight="@id/nameTextView"
         android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp"
-        android:layout_marginRight="5dp"
         style="@style/NumberProgressBar_Relax_Blue"/>
 
     <com.dd.processbutton.iml.ActionProcessButton
@@ -75,8 +72,6 @@
         android:layout_alignLeft="@id/nameTextView"
         android:layout_alignRight="@id/nameTextView"
         android:layout_marginBottom="16dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginLeft="0dp"
         android:layout_marginTop="10dp"
         android:textColor="@android:color/white"
         android:text="Reservar"
