--- a/app/src/main/res/layout/sports_row.xml
+++ b/app/src/main/res/layout/sports_row.xml
@@ -3,6 +3,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:paddingBottom="12dp"
     android:background="#ffffffff">
 
     <ImageView
@@ -77,11 +78,4 @@
         android:textColor="@android:color/white"
         android:textStyle="bold"/>
 
-    <View
-        android:id="@+id/bottomSeparatorLine"
-        android:layout_width="fill_parent"
-        android:layout_height="1dp"
-        android:layout_below="@id/teacherTextView"
-        android:layout_marginTop="5dp"
-        android:background="#d5d5d5"/>
 </RelativeLayout>
