--- a/app/src/main/res/layout/courses_detail.xml
+++ b/app/src/main/res/layout/courses_detail.xml
@@ -5,63 +5,89 @@
     android:layout_height="match_parent"
     android:background="@android:color/white">
 
-    <FrameLayout
-        android:id="@+id/infoBackgroundView"
-        android:layout_width="fill_parent"
+    <ScrollView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#fff1f1f1">
+        android:id="@+id/scrollView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
-        <TextView
-            android:id="@+id/nameTextView"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginBottom="3dp"
-            android:maxLines="1"
-            android:textSize="22sp"
-            android:textStyle="bold"
-            android:text="Termodinamica"
-            android:textColor="@android:color/black"
-            android:ellipsize="end"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/sectionTextView"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="35dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginBottom="8dp"
-            android:maxLines="3"
-            android:textSize="14sp"
-            android:text="Sección 3"
-            android:textColor="#666666"
-            android:ellipsize="end"/>
+            <TextView
+                android:id="@+id/announcementLabelTextView"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:maxLines="999"
+                android:textSize="16sp"
+                android:padding="15dp"
+                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                android:background="#F0f0f0"
+                android:textColor="@android:color/secondary_text_light"
+                android:ellipsize="end"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
 
-    </FrameLayout>
+            <ListView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/announcementLabelTextView"
+                android:id="@+id/teachersListView" />
 
+            <TextView
+                android:id="@+id/notesLabelTextView"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:textSize="22sp"
+                android:padding="15dp"
+                android:text="Notas"
+                android:background="#F0f0f0"
+                android:textColor="@android:color/secondary_text_light_nodisable"
+                android:ellipsize="end"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@+id/teachersListView" />
 
+            <TextView
+                android:id="@+id/finalGradeTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginBottom="6dp"
+                android:layout_alignTop="@id/notesLabelTextView"
+                android:gravity="right"
+                android:layout_alignParentRight="true"
+                android:maxLines="1"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:text="7.0"
+                android:textColor="@android:color/white"
+                android:paddingTop="2dp"
+                android:paddingBottom="2dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:background="@drawable/sport_reserved_text"
+                android:ellipsize="end"/>
 
+            <ListView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/gradesListView"
+                android:layout_below="@id/notesLabelTextView" />
 
+            </RelativeLayout>
 
-    <TextView
-        android:id="@+id/contentTextView"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/infoBackgroundView"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="15dp"
-        android:maxLines="99999"
-        android:textSize="16sp"
-        android:text="Api con problemas"
-        android:textColor="@android:color/black"
-        android:ellipsize="end"/>
-
-
-
+    </ScrollView>
 
 </RelativeLayout>
