--- a/app/src/main/res/layout/courses_row.xml
+++ b/app/src/main/res/layout/courses_row.xml
@@ -3,13 +3,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:padding="10dp"
     android:background="#fff">
 
     <ImageView
         android:id="@+id/navigationNextItemImageView"
         android:layout_width="25dp"
         android:layout_height="25dp"
-        android:layout_marginRight="5dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:src="@drawable/ic_navigation_next_item"/>
@@ -18,30 +18,12 @@
         android:id="@+id/nameTextView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
-        android:layout_marginLeft="10dp"
-        android:maxLines="1"
-        android:textSize="18sp"
+        android:layout_marginTop="2dp"
+        android:maxLines="3"
+        android:textSize="16sp"
         android:text="Algebra Lineal"
         android:textStyle="bold"
-        android:textColor="@android:color/black"
-        android:ellipsize="end"
-        android:layout_toLeftOf="@+id/navigationNextItemImageView"
-        android:layout_toStartOf="@+id/navigationNextItemImageView" />
-
-    <TextView
-        android:id="@+id/sectionTextView"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="-10dp"
-        android:layout_marginBottom="15dp"
-        android:layout_below="@id/nameTextView"
-        android:layout_marginLeft="10dp"
-        android:maxLines="1"
-        android:textSize="16sp"
-        android:text="Sección 3"
-        android:textColor="#666666"
+        android:textColor="@android:color/primary_text_light_nodisable"
         android:ellipsize="end"
         android:layout_toLeftOf="@+id/navigationNextItemImageView"
         android:layout_toStartOf="@+id/navigationNextItemImageView" />
