--- a/app/src/main/res/layout/courses_row_header.xml
+++ b/app/src/main/res/layout/courses_row_header.xml
@@ -3,13 +3,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:padding="10dp"
     android:background="#fff0f0f0">
 
     <TextView
         android:id="@+id/titleTextView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
         android:maxLines="1"
         android:textSize="16sp"
         android:text="2013-2"
