--- a/app/src/main/res/layout/courses_detail.xml
+++ b/app/src/main/res/layout/courses_detail.xml
@@ -62,7 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="3dp"
                 android:layout_marginRight="15dp"
                 android:layout_marginBottom="6dp"
                 android:layout_alignTop="@id/notesLabelTextView"
@@ -72,6 +72,31 @@
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:text="7.0"
+                android:visibility="gone"
+                android:textColor="@android:color/white"
+                android:paddingTop="2dp"
+                android:paddingBottom="2dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:background="@drawable/sport_reserved_text"
+                android:ellipsize="end"/>
+
+            <TextView
+                android:id="@+id/statusTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="3dp"
+                android:layout_marginRight="3dp"
+                android:layout_marginBottom="6dp"
+                android:layout_alignTop="@id/notesLabelTextView"
+                android:gravity="right"
+                android:layout_toLeftOf="@id/finalGradeTextView"
+                android:maxLines="1"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:text="Aprobado"
+                android:visibility="gone"
                 android:textColor="@android:color/white"
                 android:paddingTop="2dp"
                 android:paddingBottom="2dp"
