--- a/app/src/main/res/drawable/course_status_background.xml
+++ b/app/src/main/res/drawable/course_status_background.xml
@@ -3,6 +3,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid
-        android:color="@android:color/holo_red_dark"/>
+        android:color="@color/red_error"/>
     <corners android:radius="5dp" />
 </shape>
