--- a/app/src/main/res/drawable/message_unread_circle.xml
+++ b/app/src/main/res/drawable/message_unread_circle.xml
@@ -3,7 +3,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid
-        android:color="@android:color/holo_blue_bright"/>
+        android:color="@color/blue_normal"/>
     <size
         android:width="10dp"
         android:height="10dp"/>
