--- a/app/src/main/res/drawable/sport_reserved_text.xml
+++ b/app/src/main/res/drawable/sport_reserved_text.xml
@@ -3,6 +3,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid
-        android:color="@android:color/holo_blue_dark"/>
+        android:color="@color/blue_normal"/>
     <corners android:radius="5dp" />
 </shape>
