--- a/app/src/main/res/layout/calendar_detail_public.xml
+++ b/app/src/main/res/layout/calendar_detail_public.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:text="Asuntos estuiantiles"
         android:id="@+id/organizerTextView"
-        android:textColor="@android:color/holo_blue_light"
+        android:textColor="@color/primary"
         android:textSize="18sp"
         android:maxLines="3"
         android:layout_marginTop="10dp"
@@ -30,7 +30,7 @@
         android:text="Gira Nacional Taller #1"
         android:id="@+id/descriptionTextView"
         android:layout_below="@id/organizerTextView"
-        android:textColor="@android:color/secondary_text_light"
+        android:textColor="@color/text_dark"
         android:textSize="24sp"
         android:textStyle="bold"
         android:maxLines="3"
@@ -48,7 +48,7 @@
         android:text="Garage Universidad Adolfo Ibañez"
         android:id="@+id/summaryTextView"
         android:layout_below="@id/descriptionTextView"
-        android:textColor="@android:color/secondary_text_light"
+        android:textColor="@color/text_light"
         android:textSize="18sp"
         android:maxLines="3"
         android:layout_marginTop="6dp"
@@ -65,7 +65,7 @@
         android:text="15:00 - 16:00 25-09-2014"
         android:id="@+id/dateTextView"
         android:layout_below="@id/summaryTextView"
-        android:textColor="@android:color/secondary_text_light_nodisable"
+        android:textColor="@color/text_lighter"
         android:textSize="16sp"
         android:textStyle="italic"
         android:maxLines="3"
