--- a/app/src/main/res/drawable/course_status_default_background.xml
+++ b/app/src/main/res/drawable/course_status_default_background.xml
@@ -3,6 +3,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid
-        android:color="@android:color/darker_gray"/>
+        android:color="@color/text_lighter"/>
     <corners android:radius="5dp" />
 </shape>
