--- a/app/src/main/res/layout/calendar_detail_personal.xml
+++ b/app/src/main/res/layout/calendar_detail_personal.xml
@@ -2,43 +2,19 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
-    android:paddingBottom="10dp"
+    android:padding="20dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Prof. BUSTAMANTE SEPÚLVEDA MIGUEL ARTURO"
-        android:id="@+id/organizerTextView"
-        android:textColor="@android:color/holo_blue_light"
-        android:textSize="16sp"
-        android:maxLines="3"
-        android:gravity="center"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="MECÁNICA SEC.1"
         android:id="@+id/nameTextView"
-        android:layout_below="@id/organizerTextView"
-        android:textColor="@android:color/secondary_text_light"
+        android:textColor="@color/text_dark"
         android:textSize="20sp"
         android:textStyle="bold"
         android:maxLines="3"
-        android:gravity="center"
-        android:layout_marginTop="6dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
@@ -47,16 +23,30 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="BUSTAMANTE SEPÚLVEDA MIGUEL ARTURO"
+        android:layout_below="@id/nameTextView"
+        android:id="@+id/organizerTextView"
+        android:textColor="@color/primary"
+        android:textSize="16sp"
+        android:maxLines="3"
+        android:layout_marginTop="6dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="101-A"
         android:id="@+id/roomTextView"
-        android:layout_below="@id/nameTextView"
-        android:textColor="@android:color/secondary_text_light"
+        android:layout_below="@id/organizerTextView"
+        android:textColor="@color/text_light"
         android:textSize="22sp"
         android:maxLines="3"
-        android:gravity="center"
         android:layout_marginTop="6dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
@@ -68,14 +58,11 @@
         android:text="15:00 - 16:00 25-09-2014"
         android:id="@+id/dateTextView"
         android:layout_below="@id/roomTextView"
-        android:textColor="@android:color/secondary_text_light_nodisable"
+        android:textColor="@color/text_lighter"
         android:textSize="16sp"
         android:textStyle="italic"
         android:maxLines="3"
-        android:gravity="center"
         android:layout_marginTop="8dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
