--- a/app/src/main/res/layout/courses_detail.xml
+++ b/app/src/main/res/layout/courses_detail.xml
@@ -5,11 +5,13 @@
     android:layout_height="match_parent"
     android:background="@android:color/white">
 
+    <include layout="@layout/toolbar" android:id="@+id/toolbar"/>
+
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/scrollView"
-        android:layout_alignParentTop="true"
+        android:layout_below="@id/toolbar"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
 
