--- a/app/src/main/res/layout/navigation_row_normal.xml
+++ b/app/src/main/res/layout/navigation_row_normal.xml
@@ -11,6 +11,7 @@
         android:layout_height="fill_parent"
         android:layout_marginTop="15dp"
         android:layout_marginLeft="15dp"
+        android:textColor="@color/grey_900"
         android:textSize="18sp"
         android:text="Placeholder"/>
 </RelativeLayout>
