--- a/app/src/main/res/layout/courses_detail.xml
+++ b/app/src/main/res/layout/courses_detail.xml
@@ -5,7 +5,17 @@
     android:layout_height="match_parent"
     android:background="@android:color/white">
 
-    <include layout="@layout/toolbar" android:id="@+id/toolbar"/>
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="@dimen/topMargin"
+        android:elevation="6dp"
+        android:id="@+id/statusMargin"
+        android:background="@color/grey_800"/>
+    <include android:layout_below="@id/statusMargin"
+        layout="@layout/toolbar"
+        android:id="@+id/toolbar"
+        android:layout_height="wrap_content"
+        android:layout_width="fill_parent" />
 
     <ScrollView
         android:layout_width="wrap_content"
@@ -50,6 +60,7 @@
                 android:textSize="22sp"
                 android:padding="15dp"
                 android:text="Notas"
+                android:fontFamily="sans-serif-medium"
                 android:background="#F0f0f0"
                 android:textColor="@android:color/secondary_text_light_nodisable"
                 android:ellipsize="end"
@@ -60,7 +71,7 @@
                 android:layout_below="@+id/teachersListView" />
 
             <TextView
-                android:id="@+id/finalGradeTextView"
+                android:id="@+id/statusTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -72,8 +83,8 @@
                 android:layout_alignParentRight="true"
                 android:maxLines="1"
                 android:textSize="16sp"
-                android:textStyle="bold"
-                android:text="7.0"
+                android:fontFamily="sans-serif-medium"
+                android:text="Aprobado"
                 android:visibility="gone"
                 android:textColor="@android:color/white"
                 android:paddingTop="2dp"
@@ -84,7 +95,7 @@
                 android:ellipsize="end"/>
 
             <TextView
-                android:id="@+id/statusTextView"
+                android:id="@+id/finalGradeTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -93,11 +104,11 @@
                 android:layout_marginBottom="6dp"
                 android:layout_alignTop="@id/notesLabelTextView"
                 android:gravity="right"
-                android:layout_toLeftOf="@id/finalGradeTextView"
+                android:layout_toLeftOf="@id/statusTextView"
                 android:maxLines="1"
                 android:textSize="16sp"
-                android:textStyle="bold"
-                android:text="Aprobado"
+                android:fontFamily="sans-serif-medium"
+                android:text="7.0"
                 android:visibility="gone"
                 android:textColor="@android:color/white"
                 android:paddingTop="2dp"
@@ -106,6 +117,8 @@
                 android:paddingRight="5dp"
                 android:background="@drawable/sport_reserved_text"
                 android:ellipsize="end"/>
+
+
 
             <ListView
                 android:layout_width="wrap_content"
