--- a/app/src/main/res/layout/calendar_detail_personal.xml
+++ b/app/src/main/res/layout/calendar_detail_personal.xml
@@ -2,18 +2,18 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
-    android:padding="20dp"
+    android:padding="24dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="MECÁNICA SEC.1"
+        android:text="Calculo Multivariables Sec. 2"
         android:id="@+id/nameTextView"
         android:textColor="@color/text_dark"
-        android:textSize="20sp"
-        android:textStyle="bold"
+        android:textSize="24sp"
+        android:fontFamily="sans-serif-medium"
         android:maxLines="3"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -23,13 +23,14 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="BUSTAMANTE SEPÚLVEDA MIGUEL ARTURO"
+        android:text="Lopez Jullian Nicolas Andres"
         android:layout_below="@id/nameTextView"
         android:id="@+id/organizerTextView"
+        android:fontFamily="sans-serif-normal"
         android:textColor="@color/primary"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:maxLines="3"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="5dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
@@ -43,10 +44,10 @@
         android:text="101-A"
         android:id="@+id/roomTextView"
         android:layout_below="@id/organizerTextView"
-        android:textColor="@color/text_light"
-        android:textSize="22sp"
+        android:textColor="@color/text_dark"
+        android:textSize="28sp"
         android:maxLines="3"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="16dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
