--- a/app/src/main/res/layout/calendar_detail_public.xml
+++ b/app/src/main/res/layout/calendar_detail_public.xml
@@ -2,7 +2,7 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
-    android:paddingBottom="10dp"
+    android:padding="24dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -15,9 +15,6 @@
         android:textColor="@color/primary"
         android:textSize="18sp"
         android:maxLines="3"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -32,11 +29,9 @@
         android:layout_below="@id/organizerTextView"
         android:textColor="@color/text_dark"
         android:textSize="24sp"
-        android:textStyle="bold"
+        android:fontFamily="sans-serif-medium"
         android:maxLines="3"
         android:layout_marginTop="6dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
@@ -51,9 +46,7 @@
         android:textColor="@color/text_light"
         android:textSize="18sp"
         android:maxLines="3"
-        android:layout_marginTop="6dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
@@ -69,9 +62,7 @@
         android:textSize="16sp"
         android:textStyle="italic"
         android:maxLines="3"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
