--- a/app/src/main/res/layout/courses_detail_row_grade.xml
+++ b/app/src/main/res/layout/courses_detail_row_grade.xml
@@ -4,33 +4,33 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="10dp">
+    android:background="@color/grey_white_1000"
+    android:paddingTop="20dp"
+    android:paddingBottom="20dp">
 
     <TextView
         android:id="@+id/nameTextView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:layout_marginBottom="0dp"
         android:maxLines="1"
-        android:textSize="18sp"
-        android:textStyle="bold"
+        android:textSize="16sp"
         android:text="Prueba 1"
-        android:textColor="@android:color/black"
+        android:textColor="@color/text_dark"
         android:ellipsize="end"/>
 
     <TextView
         android:id="@+id/gradeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="15dp"
+        android:layout_marginRight="16dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:maxLines="1"
         android:textSize="14sp"
-        android:textStyle="bold"
+        android:fontFamily="sans-serif-medium"
         android:gravity="right"
         android:text="7.0"
         android:paddingTop="2dp"
@@ -46,14 +46,14 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:layout_marginBottom="10dp"
         android:maxLines="1"
-        android:textSize="15sp"
+        android:textSize="14sp"
         android:layout_below="@id/nameTextView"
         android:text="01-04-2014 19:30:00"
-        android:textColor="@android:color/secondary_text_dark_nodisable"
+        android:textColor="@color/text_lighter"
         android:ellipsize="end"/>
 
 </RelativeLayout>
