--- a/app/src/main/res/layout/courses_row.xml
+++ b/app/src/main/res/layout/courses_row.xml
@@ -3,7 +3,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp"
+    android:paddingTop="20dp"
+    android:paddingBottom="20dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
     android:background="#fff">
 
     <ImageView
@@ -22,8 +25,7 @@
         android:maxLines="3"
         android:textSize="16sp"
         android:text="Algebra Lineal"
-        android:textStyle="bold"
-        android:textColor="@android:color/primary_text_light_nodisable"
+        android:textColor="@color/text_dark"
         android:ellipsize="end"
         android:layout_toLeftOf="@+id/navigationNextItemImageView"
         android:layout_toStartOf="@+id/navigationNextItemImageView" />
