--- a/app/src/main/res/layout/courses_row_header.xml
+++ b/app/src/main/res/layout/courses_row_header.xml
@@ -3,8 +3,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp"
-    android:background="#fff0f0f0">
+    android:paddingTop="20dp"
+    android:paddingBottom="20dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:background="@color/grey_300">
 
     <TextView
         android:id="@+id/titleTextView"
@@ -13,8 +16,8 @@
         android:maxLines="1"
         android:textSize="16sp"
         android:text="2013-2"
-        android:textColor="#666666"
-        android:textStyle="bold"
+        android:textColor="@color/grey_600"
+        android:fontFamily="sans-serif-medium"
         android:ellipsize="end"/>
 
 </RelativeLayout>
