--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -11,6 +11,7 @@
         android:id="@+id/homePager"
         android:layout_width="match_parent"
         android:layout_height="230dp"
+        android:elevation="3dp"
         android:background="#f3f3f3" />
 
     <com.viewpagerindicator.CirclePageIndicator
