--- a/app/src/main/res/layout/messages_detail.xml
+++ b/app/src/main/res/layout/messages_detail.xml
@@ -5,26 +5,32 @@
     android:layout_height="match_parent"
     android:background="@android:color/white">
 
-    <include layout="@layout/toolbar" android:id="@+id/toolbar"/>
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="@dimen/topMargin"
+        android:elevation="6dp"
+        android:id="@+id/statusMargin"
+        android:background="@color/grey_800"/>
+    <include android:layout_below="@id/statusMargin"
+        layout="@layout/toolbar"
+        android:id="@+id/toolbar"
+        android:layout_height="wrap_content"
+        android:layout_width="fill_parent" />
 
     <FrameLayout
         android:id="@+id/infoBackgroundView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/toolbar"
-        android:background="#fff1f1f1">
+        android:padding="16dp"
+        android:layout_below="@id/toolbar">
 
         <TextView
             android:id="@+id/fromTextView"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginBottom="3dp"
             android:maxLines="1"
             android:textSize="22sp"
-            android:textStyle="bold"
+            android:fontFamily="sans-serif-medium"
             android:text="Deportes"
             android:textColor="@android:color/black"
             android:ellipsize="end"/>
@@ -34,9 +40,6 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="35dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginBottom="8dp"
             android:maxLines="3"
             android:textSize="14sp"
             android:text="06/05/2014 | 14:46"
@@ -45,26 +48,19 @@
 
         </FrameLayout>
 
-
-
-
-
     <TextView
         android:id="@+id/contentTextView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/infoBackgroundView"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="15dp"
+        android:paddingTop="0dp"
+        android:paddingRight="16dp"
+        android:paddingLeft="16dp"
+        android:paddingBottom="16dp"
         android:maxLines="99999"
         android:textSize="16sp"
         android:text="Se anuncia a los alumnos que se encuentran habilitados los nuevos lockers con el nuevo sistema de lector biometrico de retina."
         android:textColor="@android:color/black"
         android:ellipsize="end"/>
-
-
-
 
 </RelativeLayout>
