--- a/app/src/main/res/layout/navigation_row_extras.xml
+++ b/app/src/main/res/layout/navigation_row_extras.xml
@@ -2,37 +2,26 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="44dp"
+    android:layout_height="wrap_content"
     android:background="#f3f3f3">
-
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="1dp"
-        android:background="#d5d5d5"/>
 
     <ImageView
         android:id="@+id/iconImageView"
         android:layout_width="18dp"
         android:layout_height="18dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="16dp"
         android:scaleType="fitCenter"/>
 
     <TextView
         android:id="@+id/titleTextView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_alignLeft="@id/iconImageView"
-        android:layout_marginTop="13dp"
-        android:layout_marginLeft="28dp"
-        android:textSize="13sp"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="55dp"
+        android:textSize="14sp"
         android:textColor="#707070"
+        android:paddingBottom="20dp"
         android:text="Placeholder"/>
 
-    <View
-        android:id="@+id/bottomSeparatorLine"
-        android:layout_width="fill_parent"
-        android:layout_height="1dp"
-        android:layout_alignParentBottom="true"
-        android:background="#d5d5d5"/>
 </RelativeLayout>
