--- a/app/src/main/res/layout/navigation_row_user.xml
+++ b/app/src/main/res/layout/navigation_row_user.xml
@@ -2,18 +2,18 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="100dp">
     <ImageView
         android:adjustViewBounds="true"
         android:layout_width="fill_parent"
-        android:layout_height="50dp"
+        android:layout_height="fill_parent"
         android:layout_gravity="center"
         android:src="@drawable/welcome_image_1"
         android:scaleType="centerCrop"/>
 
     <View
         android:layout_width="fill_parent"
-        android:layout_height="50dp"
+        android:layout_height="fill_parent"
         android:background="@android:color/black"
         android:alpha="0.39" />
 
@@ -24,12 +24,10 @@
         android:id="@+id/usernameTextView"
         android:textColor="@android:color/white"
         android:textSize="18sp"
-        android:textStyle="bold"
+        android:fontFamily="sans-serif-medium"
         android:shadowColor="@android:color/black"
-        android:shadowDx="0"
-        android:shadowDy="0"
-        android:shadowRadius="2"
-        android:layout_centerVertical="true"
+        android:layout_marginBottom="16dp"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="18dp" />
