--- a/app/src/main/res/layout/sports_detail.xml
+++ b/app/src/main/res/layout/sports_detail.xml
@@ -2,7 +2,7 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
-    android:padding="15dp"
+    android:padding="24dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
@@ -11,8 +11,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="22sp"
-        android:textStyle="bold"
-        android:textColor="@android:color/primary_text_light"
+        android:fontFamily="sans-serif-medium"
+        android:textColor="@color/text_dark"
         android:text="Basketball"/>
 
     <TextView
@@ -20,10 +20,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/nameTextView"
-        android:layout_marginTop="3dp"
+        android:layout_marginTop="6dp"
         android:layout_alignLeft="@id/nameTextView"
         android:layout_marginRight="5dp"
-        android:textColor="@android:color/secondary_text_light"
+        android:textColor="@color/text_light"
         android:textSize="14sp"
         android:text="Alvaro Enriquez Soto"/>
 
@@ -33,9 +33,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/teacherTextView"
         android:layout_alignLeft="@id/nameTextView"
-        android:layout_marginTop="3dp"
+        android:layout_marginTop="6dp"
         android:layout_marginBottom="5dp"
-        android:textColor="#666666"
+        android:textColor="@color/text_lighter"
         android:textSize="14sp"
         android:text="Sala de máquinas"/>
 
