--- a/app/src/main/res/layout/sports_row.xml
+++ b/app/src/main/res/layout/sports_row.xml
@@ -26,7 +26,7 @@
         android:layout_marginBottom="5dp"
         android:maxLines="3"
         android:textSize="18sp"
-        android:textStyle="bold"
+        android:textColor="@color/text_dark"
         android:text="Basketball"
         android:ellipsize="end"/>
 
@@ -39,9 +39,9 @@
         android:layout_alignRight="@id/nameTextView"
         android:layout_marginBottom="5dp"
         android:maxLines="3"
-        android:textSize="13sp"
+        android:textSize="14sp"
         android:text="Aldo Devoto Holguín"
-        android:textColor="#666666"
+        android:textColor="@color/text_dark"
         android:ellipsize="end"/>
 
     <TextView
