--- a/app/src/main/res/layout/messages_main.xml
+++ b/app/src/main/res/layout/messages_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout
+<android.support.v4.widget.SwipeRefreshLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ptr_layout"
     android:background="@color/grey_white_1000"
@@ -11,4 +11,4 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"/>
 
-</uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
